tests/variants/nullary/ill-typed/non_nullary_var_pattern.stella
language core;

extend with #variants, #nullary-variant-labels;

fn foo(var_val : <| nval, bval |>) -> Bool {
	return match var_val {
    	<| nval = n |> => false
    | <| sval = s |> => true
  }
}

fn main(succeed : Bool) -> Nat {
  return succ(0)
}
